--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
       * {
         box-sizing: border-box;
       }
+      html,
+      body {
+        height: 100%;
+      }
       body {
         margin: 0;
         font-family: "Inter", "PingFang SC", "Microsoft YaHei", sans-serif;
         background: #f5f5f5;
         color: #333;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
       }
       main {
         display: flex;
@@ -21,10 +28,17 @@
         padding: 24px;
         max-width: 1280px;
         margin: 0 auto;
+        width: 100%;
+        flex: 1 0 auto;
+        min-height: 0;
       }
       @media (min-width: 960px) {
         main {
           flex-direction: row;
+          align-items: stretch;
+        }
+        .preview {
+          flex: 1 1 0;
         }
       }
       section {
@@ -102,15 +116,54 @@
         box-shadow: none;
       }
       .preview {
-        flex: 0 0 540px;
+        flex: 1 1 0;
         display: flex;
         justify-content: center;
-        align-items: center;
-        overflow: auto;
+        align-items: stretch;
+        padding: 24px;
+        min-height: 0;
+        background: transparent;
+        box-shadow: none;
       }
-      .preview svg {
-        max-width: 100%;
-        height: auto;
+      .card-frame {
+        flex: 0 1 auto;
+        height: 100%;
+        max-height: 1920px;
+        width: auto;
+        max-width: min(100%, 1080px);
+        aspect-ratio: 9 / 16;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 24px;
+        overflow: hidden;
+        margin: 0 auto;
+      }
+      .card-frame svg {
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
+      @media (max-width: 959px) {
+        main {
+          padding: 16px;
+        }
+        section {
+          padding: 16px;
+        }
+        .preview {
+          flex: none;
+          width: 100%;
+          padding: 12px 0 0;
+          box-shadow: none;
+          align-items: center;
+        }
+        .card-frame {
+          width: min(100%, 420px);
+          margin: 0 auto;
+          height: auto;
+          max-height: none;
+        }
       }
     </style>
   </head>
@@ -130,21 +183,22 @@
 
 有很多瑕疵，它并不完美。
 
-有朝一日，这个故事卡片应该会在YouMind重生。这里，就当做一个暂时的中转站吧。
+有朝一日，这个故事卡片应该会在YouMind重生。这里，就当做一个驿站吧。
 
 玩得开心～
 @Mgeeeeee</textarea>
         </label>
         <label>
           结尾
-          <textarea id="summary-input" placeholder="请输入结尾">Draw your mind in YouMind</textarea>
+          <textarea id="summary-input" placeholder="请输入结尾">Draw your mind in YouMind.</textarea>
         </label>
         <div class="button-row">
           <button id="download-btn" type="button">保存为 PNG 图片</button>
         </div>
       </section>
       <section class="preview">
-        <svg id="note" xmlns="http://www.w3.org/2000/svg" width="1080" height="1920" viewBox="0 0 1080 1920">
+        <div class="card-frame">
+          <svg id="note" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1080 1920">
           <defs>
             <style>
               #note text {
@@ -254,22 +308,22 @@
               id="svg-title"
               class="title"
               x="540"
-              y="320"
+              y="250"
               text-anchor="middle"
               data-line-height="80"
               data-max-width="840"
             >
-              <tspan x="540" y="320">故事标题</tspan>
+              <tspan x="540" y="250">故事标题</tspan>
             </text>
             <text
               id="svg-body"
               class="body"
               x="120"
-              y="520"
+              y="450"
               data-line-height="75"
               data-max-width="840"
             >
-              <tspan x="120" y="520">故事正文</tspan>
+              <tspan x="120" y="450">故事正文</tspan>
             </text>
             <text
               id="svg-summary"
@@ -294,6 +348,7 @@
             </g>
           </g>
         </svg>
+      </div>
       </section>
     </main>
     <script>
@@ -464,43 +519,48 @@
 
       const exportSvgAsPng = async () => {
         const svgMarkup = serializeSvg();
-        const blob = new Blob([svgMarkup], {
-          type: "image/svg+xml;charset=utf-8",
-        });
-        const objectUrl = URL.createObjectURL(blob);
+        const svgDataUrl = `data:image/svg+xml;charset=utf-8,${encodeURIComponent(svgMarkup)}`;
         const image = new Image();
-        image.crossOrigin = "anonymous";
+        if ("decoding" in image) {
+          image.decoding = "sync";
+        }
 
         const imageLoaded = new Promise((resolve, reject) => {
           image.onload = () => resolve();
           image.onerror = () => reject(new Error("图片渲染失败"));
         });
 
-        image.src = objectUrl;
-        try {
-          await imageLoaded;
+        image.src = svgDataUrl;
+        await imageLoaded;
 
-          const canvas = document.createElement("canvas");
-          canvas.width = 1080;
-          canvas.height = 1920;
-          const ctx = canvas.getContext("2d");
-          if (!ctx) {
-            throw new Error("无法创建画布上下文");
-          }
-          ctx.clearRect(0, 0, canvas.width, canvas.height);
-          ctx.drawImage(image, 0, 0);
-
-          const pngDataUrl = canvas.toDataURL("image/png");
-          const timestamp = new Date().toISOString().replace(/[:.]/g, "-");
-          const link = document.createElement("a");
-          link.href = pngDataUrl;
-          link.download = `story-card-${timestamp}.png`;
-          document.body.appendChild(link);
-          link.click();
-          document.body.removeChild(link);
-        } finally {
-          URL.revokeObjectURL(objectUrl);
+        const canvas = document.createElement("canvas");
+        canvas.width = 1080;
+        canvas.height = 1920;
+        const ctx = canvas.getContext("2d");
+        if (!ctx) {
+          throw new Error("无法创建画布上下文");
         }
+        ctx.fillStyle = "#ffffff";
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+        ctx.drawImage(image, 0, 0, canvas.width, canvas.height);
+
+        try {
+          const sample = ctx.getImageData(0, 0, 1, 1).data;
+          if (sample[3] === 0) {
+            throw new Error("生成的图片是透明的，建议换用桌面浏览器重试。");
+          }
+        } catch (readError) {
+          console.warn("采样验证失败：", readError);
+        }
+
+        const pngDataUrl = canvas.toDataURL("image/png");
+        const timestamp = new Date().toISOString().replace(/[:.]/g, "-");
+        const link = document.createElement("a");
+        link.href = pngDataUrl;
+        link.download = `story-card-${timestamp}.png`;
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
       };
 
       if (downloadBtn) {
