--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
         font-size: 16px;
         font-weight: 600;
         cursor: pointer;
-        background: linear-gradient(135deg, #4a90e2, #6ec1e4);
         color: #fff;
         transition: transform 0.2s ease, box-shadow 0.2s ease;
       }
@@ -113,6 +112,33 @@
         cursor: not-allowed;
         opacity: 0.6;
         transform: none;
+        box-shadow: none;
+      }
+      .button-row .primary {
+        background: #a7f3d0;
+        color: #064e3b;
+      }
+      .button-row .primary:hover {
+        transform: translateY(-1px);
+        box-shadow: 0 12px 24px rgba(5, 150, 105, 0.25);
+        background: #86efac;
+      }
+      .button-row .primary:active {
+        transform: translateY(0);
+        box-shadow: none;
+        background: #6ee7b7;
+      }
+      .button-row .secondary {
+        background: #e5e7eb;
+        color: #333;
+        box-shadow: none;
+      }
+      .button-row .secondary:hover {
+        transform: translateY(-1px);
+        box-shadow: 0 10px 18px rgba(107, 114, 128, 0.25);
+      }
+      .button-row .secondary:active {
+        transform: translateY(0);
         box-shadow: none;
       }
       .preview {
@@ -193,7 +219,8 @@
           <textarea id="summary-input" placeholder="请输入结尾">Draw your mind in YouMind.</textarea>
         </label>
         <div class="button-row">
-          <button id="download-btn" type="button">保存为 PNG 图片</button>
+          <button id="clear-btn" class="secondary" type="button">清空文字</button>
+          <button id="download-btn" class="primary" type="button">保存图片</button>
         </div>
       </section>
       <section class="preview">
@@ -501,6 +528,7 @@
 
       const noteSvg = document.getElementById("note");
       const downloadBtn = document.getElementById("download-btn");
+      const clearBtn = document.getElementById("clear-btn");
 
       const serializeSvg = () => {
         if (!noteSvg) {
@@ -577,6 +605,18 @@
             downloadBtn.disabled = false;
             downloadBtn.textContent = originalText;
           }
+        });
+      }
+
+      if (clearBtn) {
+        clearBtn.addEventListener("click", () => {
+          bindings.forEach(({ inputId, targetId }) => {
+            const source = document.getElementById(inputId);
+            const target = document.getElementById(targetId);
+            if (!source || !target) return;
+            source.value = "";
+            applyMultilineText(target, "");
+          });
         });
       }
     </script>
