--- a/index.html
+++ b/index.html
@@ -145,27 +145,30 @@
         flex: 1 1 0;
         display: flex;
         justify-content: center;
-        align-items: stretch;
+        align-items: center;
         padding: 24px;
         min-height: 0;
         background: transparent;
         box-shadow: none;
       }
       .card-frame {
+        position: relative;
         flex: 0 1 auto;
-        height: 100%;
-        max-height: 1920px;
-        width: auto;
+        width: min(100%, clamp(360px, calc(90vh * 0.5625), 1080px));
         max-width: min(100%, 1080px);
-        aspect-ratio: 9 / 16;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         border-radius: 24px;
         overflow: hidden;
         margin: 0 auto;
+        aspect-ratio: 9 / 16;
+      }
+      .card-frame::before {
+        content: "";
+        display: block;
+        padding-top: 177.7778%;
       }
       .card-frame svg {
+        position: absolute;
+        inset: 0;
         width: 100%;
         height: 100%;
         display: block;
@@ -187,8 +190,11 @@
         .card-frame {
           width: min(100%, 420px);
           margin: 0 auto;
-          height: auto;
+          aspect-ratio: 9 / 16;
           max-height: none;
+        }
+        .card-frame::before {
+          padding-top: 177.7778%;
         }
       }
     </style>
