--- a/index.html
+++ b/index.html
@@ -154,12 +154,17 @@
       .card-frame {
         position: relative;
         flex: 0 1 auto;
-        width: min(100%, clamp(360px, calc(90vh * 0.5625), 1080px));
-        max-width: min(100%, 1080px);
+        width: min(100%, 540px);
+        max-width: 1080px;
         border-radius: 24px;
         overflow: hidden;
         margin: 0 auto;
         aspect-ratio: 9 / 16;
+      }
+      @supports (width: clamp(1px, 2px, 3px)) {
+        .card-frame {
+          width: min(100%, clamp(360px, calc(90vh * 0.5625), 1080px));
+        }
       }
       .card-frame::before {
         content: "";
