--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <main>
       <section class="controls">
         <h1>故事卡片</h1>
-        <p class="browser-tip">请使用谷歌浏览器打开</p>
+        <p class="browser-tip">请使用PC端谷歌浏览器打开</p>
         <label>
           标题
           <input id="title-input" type="text" placeholder="请输入标题" value="🌟 缘起 🌟" />
